# suffcal

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  suffcal.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  codeql.yaml  docker.yaml
suffcal/: __main__.py  extractor.py  handler.py  media_types.py  remote_cal.py
suffcal/media/: handler.py
