[project]
name = "suffcal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instagrapi>=2.2.1",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
]
