[project]
name = "suffcal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "caldav>=2.0.1",
    "de-core-news-lg",
    "de-dep-news-trf",
    "instagrapi>=2.2.1",
    "llama-cpp-python>=0.3.16",
    "paddleocr[doc-parser,ie]>=3.2.0",
    "paddlepaddle>=3.2.0",
    # Force CPU-only PyTorch stack (avoid pulling CUDA wheels via transitive deps)
    # Pin torch/torchvision with +cpu build tags to prevent GPU variant resolution.
    # NOTE: uv respects index mapping below; explicit spec ensures smaller footprint.
    "torch==2.9+cpu",
    "transformers>=4.56.2",
]

[project.scripts]
suffcal = "suffcal.__main__:main"

[tool.uv.sources]
paddlepaddle = { index = "paddlepaddle" }
de-core-news-lg = { url = "https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl" }
de-dep-news-trf = { url = "https://github.com/explosion/spacy-models/releases/download/de_dep_news_trf-3.8.0/de_dep_news_trf-3.8.0-py3-none-any.whl" }
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["suffcal"]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "pre-commit>=4.3.0",
]
